--- a/tutorial_react.ipynb
+++ b/tutorial_react.ipynb
@@ -2,150 +2,152 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "from typing import Annotated, Literal\n",
     "from typing_extensions import TypedDict\n",
-    "from langgraph.graph import StateGraph, START, END\n",
-    "from langgraph.graph.message import add_messages"
+    "from langgraph.graph import StateGraph\n",
+    "from langgraph.graph.message import add_messages\n",
+    "from langgraph.prebuilt import ToolNode\n",
+    "from langchain_core.tools import tool\n",
+    "from langgraph.prebuilt import ToolNode\n",
+    "from langchain_openai import ChatOpenAI\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
     "class State(TypedDict):\n",
     "    messages: Annotated[list, add_messages]\n",
-    "    message_sentiment: str\n",
     "\n",
     "graph = StateGraph(State)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x17494c60d30>"
+       "<langgraph.graph.state.StateGraph at 0x21eaf1473d0>"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "def sentiment_node(state: State) -> State:\n",
-    "    return {\n",
-    "        \"message_sentiment\": detect_sentiment(state[\"messages\"][-1]),\n",
-    "    }\n",
-    "\n",
-    "def complaints_handler_node(state: State) -> State:\n",
-    "    return {\n",
-    "        \"messages\": [\n",
-    "            \"Complaint registered.\",\n",
-    "        ],\n",
-    "    }\n",
-    "\n",
-    "def support_handler_node(state: State) -> State:\n",
-    "    return {\n",
-    "        \"messages\": [\n",
-    "            \"How can I help you?\",\n",
-    "        ],\n",
-    "    }\n",
-    "\n",
-    "def detect_sentiment(message: str) -> str:\n",
-    "    return 'unhappy'\n",
-    "\n",
-    "\n",
-    "\n",
-    "def conditional_edge(state: State) -> Literal['complaints', 'support']:\n",
-    "    if state[\"message_sentiment\"] == 'unhappy':\n",
-    "        return \"complaints\"\n",
+    "@tool\n",
+    "def get_weather(location: str):\n",
+    "    \"\"\"Call to get the current weather.\"\"\"\n",
+    "    if location.lower() in [\"yorkshire\"]:\n",
+    "        return \"It's cold and wet.\"\n",
     "    else:\n",
-    "        return \"support\"\n",
+    "        return \"It's warm and sunny.\"\n",
+    "    \n",
+    "llm = ChatOpenAI(\n",
+    "    api_key=\"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\",\n",
+    "    model=\"gpt-4o\",\n",
+    ")\n",
     "\n",
+    "tools = [get_weather]\n",
     "\n",
-    "graph.add_node(sentiment_node, \"sentiment\")\n",
-    "graph.add_node(complaints_handler_node, \"complaints\")\n",
-    "graph.add_node(support_handler_node, \"support\")\n",
+    "llm_with_tools = llm.bind_tools(tools)\n",
     "\n",
-    "graph.add_conditional_edges(\n",
-    "    '__start__',\n",
-    "    conditional_edge,\n",
-    "    {\n",
-    "        'complaints': '__end__',\n",
-    "        'support': '__end__',\n",
-    "    }\n",
-    ")"
+    "tool_node = ToolNode(tools)\n",
+    "\n",
+    "graph.add_node(\"tool_node\", tool_node)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<langgraph.graph.state.StateGraph at 0x17494c60d30>"
+       "<langgraph.graph.state.StateGraph at 0x21eaf1473d0>"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def prompt_node(state: State) -> State:\n",
+    "    new_message = llm_with_tools.invoke(state[\"messages\"])\n",
+    "    return {\"messages\": [new_message]}\n",
+    "\n",
+    "graph.add_node(\"prompt_node\", prompt_node)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<langgraph.graph.state.StateGraph at 0x21eaf1473d0>"
+      ]
+     },
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "\n",
-    "\n",
-    "\n",
-    "graph.add_edge(\"complaints\", \"__end__\")\n",
-    "graph.add_edge(\"support\", \"__end__\")"
+    "def conditional_edge(state: State) -> Literal['tool_node', '__end__']:\n",
+    "    last_message = state[\"messages\"][-1]\n",
+    "    if last_message.tool_calls:\n",
+    "        return \"tool_node\"\n",
+    "    else:\n",
+    "        return \"__end__\"\n",
+    "    \n",
+    "graph.add_conditional_edges(\n",
+    "    'prompt_node',\n",
+    "    conditional_edge\n",
+    ")\n",
+    "graph.add_edge(\"tool_node\", \"prompt_node\")\n",
+    "graph.set_entry_point(\"prompt_node\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
-     "ename": "ValueError",
-     "evalue": "START cannot be an end node",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[39], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mgraph\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mset_entry_point\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43m__start__\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m graph\u001b[38;5;241m.\u001b[39mcompile()\n\u001b[0;32m      5\u001b[0m graph\u001b[38;5;241m.\u001b[39minvoke({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmessages\u001b[39m\u001b[38;5;124m\"\u001b[39m: [\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mI\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mm unhappy with the service.\u001b[39m\u001b[38;5;124m\"\u001b[39m]})\n",
-      "File \u001b[1;32mc:\\Users\\Lenovo ThinkPad\\Repos\\LangGraph for Beginners\\.conda\\lib\\site-packages\\langgraph\\graph\\graph.py:313\u001b[0m, in \u001b[0;36mGraph.set_entry_point\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m    302\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mset_entry_point\u001b[39m(\u001b[38;5;28mself\u001b[39m, key: \u001b[38;5;28mstr\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Self:\n\u001b[0;32m    303\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m\"\"\"Specifies the first node to be called in the graph.\u001b[39;00m\n\u001b[0;32m    304\u001b[0m \n\u001b[0;32m    305\u001b[0m \u001b[38;5;124;03m    Equivalent to calling `add_edge(START, key)`.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    311\u001b[0m \u001b[38;5;124;03m        None\u001b[39;00m\n\u001b[0;32m    312\u001b[0m \u001b[38;5;124;03m    \"\"\"\u001b[39;00m\n\u001b[1;32m--> 313\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_edge\u001b[49m\u001b[43m(\u001b[49m\u001b[43mSTART\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n",
-      "File \u001b[1;32mc:\\Users\\Lenovo ThinkPad\\Repos\\LangGraph for Beginners\\.conda\\lib\\site-packages\\langgraph\\graph\\state.py:416\u001b[0m, in \u001b[0;36mStateGraph.add_edge\u001b[1;34m(self, start_key, end_key)\u001b[0m\n\u001b[0;32m    401\u001b[0m \u001b[38;5;250m\u001b[39m\u001b[38;5;124;03m\"\"\"Adds a directed edge from the start node to the end node.\u001b[39;00m\n\u001b[0;32m    402\u001b[0m \n\u001b[0;32m    403\u001b[0m \u001b[38;5;124;03mIf the graph transitions to the start_key node, it will always transition to the end_key node next.\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    413\u001b[0m \u001b[38;5;124;03m    StateGraph\u001b[39;00m\n\u001b[0;32m    414\u001b[0m \u001b[38;5;124;03m\"\"\"\u001b[39;00m\n\u001b[0;32m    415\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(start_key, \u001b[38;5;28mstr\u001b[39m):\n\u001b[1;32m--> 416\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43madd_edge\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstart_key\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mend_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m    418\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcompiled:\n\u001b[0;32m    419\u001b[0m     logger\u001b[38;5;241m.\u001b[39mwarning(\n\u001b[0;32m    420\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mAdding an edge to a graph that has already been compiled. This will \u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    421\u001b[0m         \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mnot be reflected in the compiled graph.\u001b[39m\u001b[38;5;124m\"\u001b[39m\n\u001b[0;32m    422\u001b[0m     )\n",
-      "File \u001b[1;32mc:\\Users\\Lenovo ThinkPad\\Repos\\LangGraph for Beginners\\.conda\\lib\\site-packages\\langgraph\\graph\\graph.py:221\u001b[0m, in \u001b[0;36mGraph.add_edge\u001b[1;34m(self, start_key, end_key)\u001b[0m\n\u001b[0;32m    219\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEND cannot be a start node\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    220\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m end_key \u001b[38;5;241m==\u001b[39m START:\n\u001b[1;32m--> 221\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mValueError\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mSTART cannot be an end node\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m    223\u001b[0m \u001b[38;5;66;03m# run this validation only for non-StateGraph graphs\u001b[39;00m\n\u001b[0;32m    224\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m \u001b[38;5;28mhasattr\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mchannels\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;129;01mand\u001b[39;00m start_key \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mset\u001b[39m(\n\u001b[0;32m    225\u001b[0m     start \u001b[38;5;28;01mfor\u001b[39;00m start, _ \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39medges\n\u001b[0;32m    226\u001b[0m ):\n",
-      "\u001b[1;31mValueError\u001b[0m: START cannot be an end node"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The weather in Yorkshire is currently cold and wet.\n"
      ]
     }
    ],
    "source": [
+    "APP = graph.compile()\n",
     "\n",
-    "graph.set_entry_point(\"__start__\")\n",
-    "graph.compile()\n",
+    "new_state = APP.invoke({\"messages\": [\"Whats the weather in yorkshire?\"]})\n",
     "\n",
-    "\n",
-    "graph.invoke({\"messages\": [\"I'm unhappy with the service.\"]})\n",
-    "\n"
+    "print(new_state[\"messages\"][-1].content)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   }
  ],
